# tracknjob-job-search-service

./: .replit  Dockerfile  pyproject.toml  railway.json  replit.md
.github/workflows/: test.yml
.jules/: sentinel.md
artifacts/api-server/src/: app.ts
artifacts/job-search-api/: .env.example  .gitignore  =3.12  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  pytest_out.txt  requirements.txt  start.sh  test_mock.py
artifacts/job-search-api/.githooks/: pre-push
artifacts/job-search-api/app/: alert_tasks.py  auth.py  celery_app.py  celery_config.py  config.py  db.py  email.py  main.py  models.py  scoring.py  tasks.py
artifacts/job-search-api/data/: india_ats_sources.json  india_ats_sources_v2.json  india_validation_report_2026-05-13.json  startup_ats_sources.json
artifacts/job-search-api/docs/: INDEX.md  (+10 more)
attached_assets/: Pasted-ATS-PROBE-PATTERNS-ats-type-greenhouse-url-template-htt_1775749271512.txt  Pasted-Add-SQLAlchemy-ORM-models-for-AtsSource-CompanyDiscover_1775710151885.txt  Pasted-Context-This-is-a-Python-FastAPI-job-search-microservic_1775706117540.txt  Pasted-EUROPE-SIGNALS-germany-france-uk-united-kingdom-netherl_1774801316083.txt  Pasted-INFO-alembic-runtime-migration-Context-impl-PostgresqlI_1778681364864.txt  Pasted-It-looks-like-the-Field-Mapping-Free-Sources-to-DB-Colu_1775445151548.txt  Pasted-You-are-extending-an-existing-job-search-microservice-b_1778647879049.txt  Pasted-You-are-extending-an-existing-job-search-microservice-b_1778682428096.txt  Pasted-import-resend-import-os-resend-api-key-os-getenv-RESEND_1774415014047.txt
(+102 files in other folders)
